# delicego

./: .gitignore
delicego/backend/: README.md  alembic.ini  pyproject.toml  requirements.txt
delicego/backend/app/: main.py
delicego/backend/artifacts/: xgb_sales.json  xgb_sales_meta.json
delicego/backend/data/: mapping_ingredients_produits.yaml
delicego/backend/docs/: ALEMBIC_MIGRATION_NOTES.md  AUDIT_STOCK.md  IMPACT_ACTIONS.md  IMPACT_DASHBOARD_PUBLIC_DEV.md  IMPACT_KPIS.md  PLAN_STOCK_PRODUIT.md  PROCEDURES_PROD.md  SEED_INGREDIENTS_FOODEX_MINI.md
delicego/backend/migrations/: README  env.py
delicego/backend/models/: encoders_sales.json  xgb_sales.json
delicego/backend/scripts/: backfill_produit_id_stock.py  check_alembic_heads.py  ci_validate.py  creer_menus_vente_3_magasins.py  exemple_ingredient_alias_load_report.csv  exemple_ingredient_aliases.csv  exemple_ingredient_unmapped_summary.csv  exemple_ingredients_non_mappes.csv  export_ingredient_unmapped_summary.py  import_catalog_xlsx.py  import_catalogue_foodex.py  import_catalogue_foodex_xlsx.py  import_menus_depuis_excel_produits_sorae.py  import_recettes_from_pdfs.py  import_recettes_janvier_2025.py  ingredient_alias_load_report.csv  ingredient_product_aliases.json  init_stock_prod_3_magasins.py  load_ingredient_aliases.py  map_ingredients_to_produits.py  planifier_15_jours_3_magasins_prod.py  predict_sales.py  prepare_dataset.py  rapport_mapping_ingredients.csv  remap_ingredient_lines.py  run_forecast.py  seed_all.py  seed_demo.py  seed_ingredients_et_recettes_prod.py  seed_production_plan.py  (+5 more)
(+236 files in other folders)
