[project]
name = "delicego-backend"
version = "0.1.0"
description = "Backend DéliceGo (prévision, production, traçabilité, hygiène)"
requires-python = ">=3.12"

dependencies = [
  "fastapi==0.115.6",
  "uvicorn[standard]==0.32.1",
  "pydantic==2.10.3",
  "pydantic-settings==2.6.1",
  "SQLAlchemy==2.0.36",
  "asyncpg==0.30.0",
  "alembic==1.14.0",
  "python-dotenv==1.0.1",
]

[project.optional-dependencies]
test = [
  "pytest==8.3.4",
  "pytest-asyncio==0.24.0",
  "httpx==0.28.1",
  "testcontainers[postgresql]==4.9.0",
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.ruff]
line-length = 100
